# langchain-tutorial

./: .gitignore  README.md  pyproject.toml  test_main.http
langchain-conceptual guide-kr/: README.md
src/: llm.py  main.py  prompt.py  qna_rag_chain.py  retriever.py  store.py
use-case/: QnA.md  RAG_for_unstructured.md
