[tool.poetry]
name = "langchain-tutorial2"
version = "0.1.0"
description = ""
authors = ["ParkGunWook <saiver852@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
langchain = "^0.2.7"
langchain-openai = "^0.1.16"
langchain-community = "^0.2.9"
langchain-chroma = "^0.1.2"
bs4 = "^0.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
